// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ReactionsRowView > renders the default reactions row 1`] = `
<div>
  <div
    aria-label="Reactions"
    class="reactionsRow"
    role="toolbar"
  >
    <button
      aria-label="4 reactions for 👍"
      class="reactionsRowButton reactionsRowButtonSelected"
      tabindex="0"
      type="button"
    >
      <span
        aria-hidden="true"
        class="reactionsRowButtonContent"
      >
        👍
      </span>
      <span
        aria-hidden="true"
        class="reactionsRowButtonCount"
      >
        4
      </span>
    </button>
    <button
      aria-label="2 reactions for 🎉"
      class="reactionsRowButton"
      tabindex="0"
      type="button"
    >
      <span
        aria-hidden="true"
        class="reactionsRowButtonContent"
      >
        🎉
      </span>
      <span
        aria-hidden="true"
        class="reactionsRowButtonCount"
      >
        2
      </span>
    </button>
    <button
      aria-label="1 reactions for 👀"
      class="reactionsRowButton"
      tabindex="0"
      type="button"
    >
      <span
        aria-hidden="true"
        class="reactionsRowButtonContent"
      >
        👀
      </span>
      <span
        aria-hidden="true"
        class="reactionsRowButtonCount"
      >
        1
      </span>
    </button>
    <button
      aria-label="Add reaction"
      class="addReactionButton addReactionButtonVisible"
      type="button"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.74 2.38C13.87 2.133 12.95 2 12 2 6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10c0-.95-.133-1.87-.38-2.74a5 5 0 0 1-1.886.687 8 8 0 1 1-5.68-5.68c.1-.684.339-1.323.687-1.887"
        />
        <path
          d="M15.536 14.121a1 1 0 0 1 0 1.415A5 5 0 0 1 12 17c-1.38 0-2.632-.56-3.535-1.464a1 1 0 1 1 1.414-1.415A3 3 0 0 0 12 15c.829 0 1.577-.335 2.121-.879a1 1 0 0 1 1.415 0M8.5 12a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3m8.5-1.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0M18 6h-1a.97.97 0 0 1-.712-.287A.97.97 0 0 1 16 5q0-.424.288-.713A.97.97 0 0 1 17 4h1V3q0-.424.288-.712A.97.97 0 0 1 19 2q.424 0 .712.288Q20 2.575 20 3v1h1q.424 0 .712.287Q22 4.576 22 5t-.288.713A.97.97 0 0 1 21 6h-1v1q0 .424-.288.713A.97.97 0 0 1 19 8a.97.97 0 0 1-.712-.287A.97.97 0 0 1 18 7z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`ReactionsRowView > renders the row with a show-all button 1`] = `
<div>
  <div
    aria-label="Reactions"
    class="reactionsRow"
    role="toolbar"
  >
    <button
      aria-label="4 reactions for 👍"
      class="reactionsRowButton reactionsRowButtonSelected"
      tabindex="0"
      type="button"
    >
      <span
        aria-hidden="true"
        class="reactionsRowButtonContent"
      >
        👍
      </span>
      <span
        aria-hidden="true"
        class="reactionsRowButtonCount"
      >
        4
      </span>
    </button>
    <button
      aria-label="2 reactions for 🎉"
      class="reactionsRowButton"
      tabindex="0"
      type="button"
    >
      <span
        aria-hidden="true"
        class="reactionsRowButtonContent"
      >
        🎉
      </span>
      <span
        aria-hidden="true"
        class="reactionsRowButtonCount"
      >
        2
      </span>
    </button>
    <button
      aria-label="1 reactions for 👀"
      class="reactionsRowButton"
      tabindex="0"
      type="button"
    >
      <span
        aria-hidden="true"
        class="reactionsRowButtonContent"
      >
        👀
      </span>
      <span
        aria-hidden="true"
        class="reactionsRowButtonCount"
      >
        1
      </span>
    </button>
    <button
      class="showAllButton"
      type="button"
    >
      Show all
    </button>
    <button
      aria-label="Add reaction"
      class="addReactionButton addReactionButtonVisible"
      type="button"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.74 2.38C13.87 2.133 12.95 2 12 2 6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10c0-.95-.133-1.87-.38-2.74a5 5 0 0 1-1.886.687 8 8 0 1 1-5.68-5.68c.1-.684.339-1.323.687-1.887"
        />
        <path
          d="M15.536 14.121a1 1 0 0 1 0 1.415A5 5 0 0 1 12 17c-1.38 0-2.632-.56-3.535-1.464a1 1 0 1 1 1.414-1.415A3 3 0 0 0 12 15c.829 0 1.577-.335 2.121-.879a1 1 0 0 1 1.415 0M8.5 12a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3m8.5-1.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0M18 6h-1a.97.97 0 0 1-.712-.287A.97.97 0 0 1 16 5q0-.424.288-.713A.97.97 0 0 1 17 4h1V3q0-.424.288-.712A.97.97 0 0 1 19 2q.424 0 .712.288Q20 2.575 20 3v1h1q.424 0 .712.287Q22 4.576 22 5t-.288.713A.97.97 0 0 1 21 6h-1v1q0 .424-.288.713A.97.97 0 0 1 19 8a.97.97 0 0 1-.712-.287A.97.97 0 0 1 18 7z"
        />
      </svg>
    </button>
  </div>
</div>
`;
